--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
+    "react-select": "^5.8.1",
     "sonner": "^1.5.0"
   },
   "devDependencies": {
