--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "echarts": "^5.5.1",
     "html2pdf.js": "^0.10.2",
     "install": "^0.13.0",
     "moment": "^2.30.1",
