--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.8.1",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
